# stock_theme_extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  deployment_guide.md  docker-compose.yml  implementation_guide.md  pyproject.toml  readme.md
.claude/: settings.local.json
api/: Dockerfile  docker-compose.yml  pyproject.toml
api/scripts/: take_snapshot.py
api/themes_api/: __init__.py  app.py  config.py  db.py  response_models.py  taxonomy.py
api/themes_api/routers/: admin.py  discover.py  freshness.py  narratives.py  promotions.py  screener.py  search.py  stocks.py  taxonomy.py  themes.py
api/themes_api/services/: drift.py  promotion.py  ranking.py  regime.py  screener.py  snapshot.py  tradeability.py
dashboard/frontend/: Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json
scripts/: populate_api_tables.py  refresh_prices.py  score_regimes.py  suggest_taxonomy.py  take_snapshot.py
stock_themes/: __init__.py  batch.py  config.py  exceptions.py  models.py  settings.yaml  taxonomy.yaml  thirteen_f_cli.py
stock_themes/corpus/: tfidf.py
stock_themes/data/: base.py  cache.py  company_news.py  finnhub.py  investors.yaml  marketaux.py  news.py  patents.py  pipeline.py  sec_edgar.py  social.py  thirteen_f.py  yahoo.py
stock_themes/db/: queries.py  schema.py  store.py
stock_themes/extraction/: base.py  embedding_matcher.py  ensemble.py  investor_extractor.py  keyword_extractor.py  llm_extractor.py  narrative_extractor.py  news_extractor.py  patent_mapper.py  sic_mapper.py  social_extractor.py  time_decay.py
(+30 files in other folders)
